--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,8 @@
     <link rel="stylesheet" href="./assets/styles.css" />
   </head>
   <body>
-    <section class="main-section">
-      <h2>Main Content</h2>
-      <p>This content will be placed inside the template's body section.</p>
-
-      <h1>My new header</h1>
+    <section class="main-section pt-20 bg-red-500">
+      <h1 class="text-5xl text-red-500">this is index page</h1>
     </section>
   </body>
 </html>
-
