--- a/src/it-launch-en.html
+++ b/src/it-launch-en.html
@@ -515,37 +515,35 @@
 
         <!-- img1 -->
         <div class="swiper-slide">
-          <img
-              src="./assets/images/video-carasoul-section/img1.webp"
-               alt="pic"
+          <a href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla" class="glightbox">
+              <img
+              src="./assets/images/video-carasoul-section/img2.webp"
+              alt="pic"
               class="w-full h-[430px] object-cover rounded-2xl"
-           />
+            />
+          </a>
         </div>
 
         <!-- img2 -->
         <div class="swiper-slide">
-          <img
-          src="./assets/images/video-carasoul-section/img2.webp"
-          alt="pic"
-          class="w-full h-[430px] object-cover rounded-2xl"
-        />
+          <a href="https://www.youtube.com/watch?v=Cr9XpOkncPc&t=6s&ab_channel=Barilla" class="glightbox">
+            <img
+                src="./assets/images/video-carasoul-section/img1.webp"
+                alt="pic"
+                class="w-full h-[430px] object-cover rounded-2xl"
+            />
+          </a>
         </div>
 
         <!-- img3 -->
         <div class="swiper-slide">
-          <img
-            src="./assets/images/video-carasoul-section/img3.webp"
-            alt="pic"
-            class="w-full h-[430px] object-cover rounded-2xl"
-             />
-        </div>
-        <!-- img4 -->
-        <div class="swiper-slide">
-          <img
-              src="./assets/images/video-carasoul-section/img1.webp"
-               alt="pic"
+          <a href="https://www.youtube.com/watch?v=MsQvtVjstI0&t=10s&ab_channel=Barilla" class="glightbox">
+            <img
+              src="./assets/images/video-carasoul-section/img3.webp"
+              alt="pic"
               class="w-full h-[430px] object-cover rounded-2xl"
-           />
+              />
+          </a>
         </div>
       </div>
     </div>
