--- a/src/it-launch.html
+++ b/src/it-launch.html
@@ -537,37 +537,38 @@
 
         <!-- img1 -->
         <div class="swiper-slide">
-          <img
-              src="./assets/images/video-carasoul-section/img1.webp"
-               alt="pic"
-              class="w-full h-[430px] object-cover rounded-2xl"
-           />
-        </div>
 
-        <!-- img2 -->
-        <div class="swiper-slide">
+        <a href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla" class="glightbox">
           <img
           src="./assets/images/video-carasoul-section/img2.webp"
           alt="pic"
           class="w-full h-[430px] object-cover rounded-2xl"
         />
+
+        </a>
         </div>
 
-        <!-- img3 -->
+        <!-- img2 -->
         <div class="swiper-slide">
-          <img
-            src="./assets/images/video-carasoul-section/img3.webp"
-            alt="pic"
-            class="w-full h-[430px] object-cover rounded-2xl"
-             />
-        </div>
-        <!-- img4 -->
-        <div class="swiper-slide">
+        <a href="https://www.youtube.com/watch?v=Cr9XpOkncPc&t=6s&ab_channel=Barilla" class="glightbox">
           <img
               src="./assets/images/video-carasoul-section/img1.webp"
                alt="pic"
               class="w-full h-[430px] object-cover rounded-2xl"
            />
+        </a>
+        </div>
+
+        <!-- img3 -->
+        <div class="swiper-slide">
+
+        <a href="https://www.youtube.com/watch?v=MsQvtVjstI0&t=10s&ab_channel=Barilla" class="glightbox">
+          <img
+            src="./assets/images/video-carasoul-section/img3.webp"
+            alt="pic"
+            class="w-full h-[430px] object-cover rounded-2xl"
+             />
+        </a>
         </div>
       </div>
     </div>
