fixed progress bar and it-launch-en , it-teaser-en page  ui complete

--- a/src/it-teaser-en.html
+++ b/src/it-teaser-en.html
@@ -40,16 +40,16 @@
         <!-- hero section -->
         <div class="flex flex-col justify-center mt-9">
           <h1
-            class="w-[260px] md:w-[300px] lg:w-[400px] xl:w-[530px] mx-auto text-center uppercase"
+            class="w-[328px] md:w-[400px] lg:w-[550px] xl:w-[730px] xl:leading-[77px] mx-auto text-center uppercase"
           >
-            Nata per catturare il sugo
+            A PASTA THAT LOVES SAUCE, FOR TRUE PASTA LOVERS
           </h1>
 
           <p
-            class="w-[340px] md:w-[370px] lg:w-[450px] mx-auto lg:text-2xl text-center pt-5"
+            class="w-[328px] md:w-[440px] lg:w-[500px] mx-auto lg:text-2xl text-center pt-5"
           >
-            Barilla Al Bronzo cattura il sugo fino all'ultima goccia, per
-            un'esperienza di gusto straordinaria.
+            Imagine this: a steaming plate of Barilla Al Bronzo pasta, capturing
+            every bit of sauce till the last drop
           </p>
 
           <img
@@ -71,16 +71,15 @@
     <!-- 360 degree section -->
     <section class="relative bg-red pt-10 md:pt-16 pb-28 lg:pb-36">
       <div class="our_container">
-        <h1 class="w-[260px] sm:w-full mx-auto text-center uppercase">
-          REINVENTARE LA TRADIZIONE
+        <h1 class="w-full mx-auto text-center uppercase">
+          REINVENTING TRADITION
         </h1>
 
         <p
-          class="w-[280px] md:w-[560px] lg:w-[660px] lg:text-2xl mx-auto text-center pt-5"
+          class="w-[300px] md:w-[560px] lg:w-[660px] lg:text-2xl mx-auto text-center pt-5"
         >
-          Una nuova, elegante confezione da 500 grammi, pensata per celebrare la
-          qualità di Barilla Al Bronzo e sottolinearne l'eccezionale presa sul
-          sugo.
+          A new 500 grams refined pack, designed to celebrate Barilla Al Bronzo
+          quality, emphasizing its outstanding sauce grip.
         </p>
 
         <img
@@ -108,17 +107,16 @@
       <!-- container -->
       <div class="our_container pt-4 pb-10">
         <h1
-          class="w-[260px] sm:w-[420px] lg:w-[550px] xl:w-[820px] mx-auto text-center uppercase"
+          class="w-[300px] sm:w-[420px] lg:w-[550px] xl:w-[730px] mx-auto text-center uppercase"
         >
-          TUTTI I FORMATI PER ACCONTENTARE OGNI PALATO
+          ALL THE SHAPES TO SUIT EVERY PALATE
         </h1>
 
         <p
-          class="w-[320px] sm:w-[380px] md:w-[520px] lg:w-[560px] xl:w-[530px] mx-auto text-center pt-5"
+          class="w-[320px] sm:w-[380px] md:w-[450px] lg:w-[550px] xl:w-[530px] lg:text-2xl mx-auto text-center pt-5"
         >
-          Il loro design, sapientemente realizzato dai nostri esperti, rende
-          ogni formato di pasta perfetto per vivere un'esperienza gastronomica
-          unica e intensa.
+          Their design, meticulously crafted by our experts makes each shape
+          perfect for a unique and intense gastronomic experience.
         </p>
 
         <!-- cards -->
@@ -314,11 +312,11 @@
     <section
       class="h-[640px] md:h-[432px] lg:h-[576px] xl:h-[708px] 2xl:h-[808px] bg-text-img-mobil md:bg-text-img-desktop bg-cover bg-center object-right flex items-center justify-center"
     >
-      <p class="lg:text-2xl md:w-[600px] lg:w-full mx-auto text-center">
-        <span class="text-xl lg:text-2xl font-acumin tracking-normal block"
-          >Sono i grani duri pregiati, coltivati in Italia,</span
-        >
-        a donare a Barilla Al Bronzo il gusto rotondo e leggermente tostato.
+      <p
+        class="w-[312px] md:w-[400px] lg:w-[460px] lg:text-2xl mx-auto text-center"
+      >
+        It is our selection of the finest durum wheat that gives Barilla Al
+        Bronzo its rounded, slightly toasted flavour.
       </p>
     </section>
 
@@ -328,19 +326,16 @@
     >
       <div>
         <h1
-          class="w-[260px] lg:w-[360px] xl:w-[460px] mx-auto text-center uppercase"
+          class="w-[260px] md:w-[370px] lg:w-[450px] xl:w-[550px] mx-auto text-center uppercase"
         >
-          UN’eccellente tenuta del sugo
+          An extraordinary sauce grip
         </h1>
-        <p class="w-[312px] sm:w-[400px] md:w-[520px] mx-auto text-center pt-5">
-          Risultato di decenni di esperienza, la nostra trafilatura al bronzo
-          conferisce alla pasta Barilla Al Bronzo una superficie ruvida e porosa
-          che aderisce senza sforzo a ogni goccia di sugo.
-        </p>
-        <p class="hidden lg:block lg:w-[430px] mx-auto text-center pt-5">
-          Il nostro grano duro di alta qualità, accuratamente selezionato, dona
-          alla pasta un sapore rotondo e leggermente tostato, dando vita a
-          un'esperienza di gusto indimenticabile.
+        <p
+          class="w-[312px] sm:w-[400px] md:w-[500px] lg:w-[600px] lg:text-2xl mx-auto text-center pt-5"
+        >
+          Drawing upon decades of expertise, our traditional bronze-cut method
+          gives Barilla Al Bronzo a rough and porous surface that effortlessly
+          clings to every drop of sauce.
         </p>
       </div>
     </section>
@@ -350,12 +345,14 @@
       <!-- img + text -->
       <div class="our_container">
         <h1
-          class="w-[328px] lg:w-[528px] xl:w-[700px] mx-auto text-center uppercase"
+          class="w-[328px] md:w-[370px] lg:w-[528px] xl:w-[700px] mx-auto text-center uppercase"
         >
-          UN PIACERE PER GLI OCCHI E PER IL PALATO
+          A PLEASURE FOR THE EYES AND THE PALATE 
         </h1>
-        <p class="lg:text-2xl text-center pt-5">
-          Innamorati di ricette classiche e creative con Barilla Al Bronzo.
+        <p
+          class="w-[250px] md:w-[300px] lg:w-full mx-auto lg:text-2xl text-center pt-5"
+        >
+          Fall in love with classic and creative recipes with Barilla al Bronzo.
         </p>
         <div class="py-12">
           <img
@@ -368,13 +365,12 @@
 
       <!-- video carousel -->
       <div>
-        <h1
-          class="w-[328px] lg:w-[428px] xl:w-[600px] mx-auto text-center uppercase"
-        >
-          IMPARA DA UNO CHEF STELLATO MICHELIN
+        <h1 class="text-center uppercase">
+          HEAR IT FROM
+          <h1 class="text-center">A MICHELIN-STARRED CHEF</h1>
         </h1>
-        <p class="lg:text-2xl w-[250px] sm:w-full mx-auto text-center pt-5">
-          Ricrea queste ricette di pasta Barilla Al Bronzo dello Chef Oldani.
+        <p class="lg:text-2xl w-[300px] lg:w-full mx-auto text-center pt-5">
+          Recreate these Barilla Al Bronzo pasta recipes by Chef Oldani.
         </p>
 
         <div
@@ -434,12 +430,11 @@
           class="w-[300px] md:w-[454px] mx-auto flex items-center gap-3 mt-8"
         >
           <!-- progress bar -->
-        <!-- progress bar -->
-        <div id="progress-bar" class="w-full h-[2px] bg-white relative">
-          <div
-            class="video-progress-bar w-0 h-full bg-blue absolute top-0 left-0"
-          ></div>
-        </div>
+          <div id="progress-bar" class="w-full h-[2px] bg-white relative">
+            <div
+              class="video-progress-bar w-0 h-full bg-blue absolute top-0 left-0"
+            ></div>
+          </div>
 
           <!-- prev button -->
           <div
@@ -510,8 +505,8 @@
         }
       });
 
-        // video swiper
-        document.addEventListener("DOMContentLoaded", () => {
+      // video swiper
+      document.addEventListener("DOMContentLoaded", () => {
         const progressBar = document.querySelector(".video-progress-bar");
 
         const swiper = new Swiper(".videoSwiper", {
@@ -550,10 +545,6 @@
           progressBar.style.width = `${Math.min(progressPercentage, 100)}%`;
         }
       });
-    </script>
-  </body>
-</html>
-
     </script>
   </body>
 </html>
