--- a/src/it-launch.html
+++ b/src/it-launch.html
@@ -221,7 +221,7 @@
   </section>
 
     <!-- 360 degree section -->
-    <section class="relative bg-red pt-10 pb-28 lg:pb-36">
+    <section class="relative bg-red pt-10 md:pt-16 pb-28 lg:pb-36">
       <div class="our_container">
         <h1 class="w-[260px] sm:w-full mx-auto text-center uppercase">
           REINVENTARE LA TRADIZIONE
@@ -236,16 +236,16 @@
         </p>
 
         <img
-          src="./assets/images/360-degree.webp"
+          src="./assets/images/carasoul-section/ITA_Mezzi Rigatoni.webp"
           alt="hero"
-          class="w-80 md:w-full lg:w-[760px] xl:w-[982px] mx-auto h-auto mt-9 md:mt-16"
+          class="w-48 md:w-80 lg:w-[380px] xl:w-[400px] mx-auto h-auto mt-[70px] md:mt-28 lg:mt-36 mb-[70px] lg:mb-[100px]"
         />
 
         <!-- 360 degree svg -->
         <img
           src="./assets/images/360-degree.svg"
           alt="hero"
-          class="w-24 mx-auto mt-6 md:mt-9"
+          class="w-24 mx-auto"
         />
       </div>
     </section>
@@ -433,13 +433,13 @@
         <div
           class="w-[300px] md:w-[454px] mx-auto flex items-center gap-3 mt-10"
         >
-          <!-- progress bar -->
-          <div id="progress-bar" class="w-full h-[2px] bg-white relative">
-            <div
-              id="progress-bar-fill"
-              class="h-full bg-red absolute top-0 left-0"
-            ></div>
-          </div>
+
+        <div  class=" progress-bar w-full h-[2px] bg-white relative">
+          <div
+            class="progress h-full bg-red absolute top-0 left-0"
+          ></div>
+        </div>
+       
 
           <!-- prev button -->
           <div
@@ -580,8 +580,7 @@
       <!-- progress bar -->
       <div id="progress-bar" class="w-full h-[2px] bg-white relative">
         <div
-          id="video-progress-bar-fill"
-          class="h-full bg-blue absolute top-0 left-0"
+          class="video-progress-bar w-0 h-full bg-blue absolute top-0 left-0"
         ></div>
       </div>
 
@@ -661,84 +660,93 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
 <!-- Initialize Swiper -->
-<script>
-  var swiper = new Swiper(".mySwiper", {
-    lazy: true,
-    pagination: false,
-    navigation: {
-      nextEl: ".custom-button-next",
-      prevEl: ".custom-button-prev",
-    },
-    slidesPerView: 1,
-    spaceBetween: 16,
-    breakpoints: {
-      768: {
-        slidesPerView: 2,
-      },
-      1024: {
-        slidesPerView: 3,
-      },
-    },
-    on: {
-      slideChange: function () {
-        updateProgressBar(this);
-        updateNavigationButtons(this);
-      },
-    },
-  });
+      <script>
+        // product weiper
+        document.addEventListener("DOMContentLoaded", () => {
+        const progressBar = document.querySelector(".progress");
 
-  function updateProgressBar(swiperInstance) {
-    const totalSlides = swiperInstance.slides.length;
-    const currentSlide = swiperInstance.activeIndex + 1;
-    const progress = (currentSlide / totalSlides) * 100;
-    document.getElementById(
-      "progress-bar-fill"
-    ).style.width = `${progress}%`;
-  }
+        const swiper = new Swiper(".mySwiper", {
+          init: false,
+          slidesPerView: 1, 
+          spaceBetween: 10,
+          lazy: true,
+          pagination: false,
+          navigation: {
+            nextEl: ".custom-button-next",
+            prevEl: ".custom-button-prev",
+          },
+          on: {
+            init: updateProgressBar,
+            slideChange: updateProgressBar,
+          },
+          breakpoints: {
+            640: {
+              slidesPerView: 1,
+            },
+            768: {
+              slidesPerView: 2,
+            },
+            1024: {
+              slidesPerView: 3,
+            },
+          },
+        });
 
-  // Initialize the progress bar
-  updateProgressBar(swiper);
+        swiper.init();
+
+        function updateProgressBar() {
+          const totalSlides = swiper.slides.length;
+          const currentIndex = swiper.activeIndex + swiper.params.slidesPerView;
+          const progressPercentage = (currentIndex / totalSlides) * 100;
+          progressBar.style.width = `${Math.min(progressPercentage, 100)}%`;
+        }
+      });
 
 
-  // video swiper
-  var videoSwiper = new Swiper(".videoSwiper", {
-    lazy: true,
-    pagination: false,
-    navigation: {
-      nextEl: ".custom-video-button-next",
-      prevEl: ".custom-video-button-prev",
-    },
-    slidesPerView: 1,
-    spaceBetween: 16,
-    breakpoints: {
-      768: {
-        slidesPerView: 2,
-      },
-      1024: {
-        slidesPerView: 3,
-      },
-    },
-    on: {
-      slideChange: function () {
-        VideoUpdateProgressBar(this);
-        updateNavigationButtons(this);
-      },
-    },
-  });
+      // video swiper
+      document.addEventListener("DOMContentLoaded", () => {
+        const progressBar = document.querySelector(".video-progress-bar");
 
-  function VideoUpdateProgressBar(swiperInstance) {
-    const totalSlides = swiperInstance.slides.length;
-    const currentSlide = swiperInstance.activeIndex + 1;
-    const progress = (currentSlide / totalSlides) * 100;
-    document.getElementById(
-      "video-progress-bar-fill"
-    ).style.width = `${progress}%`;
-  }
+        const swiper = new Swiper(".videoSwiper", {
+          init: false,
+          slidesPerView: 1,
+          spaceBetween: 10,
+          lazy: true,
+          pagination: false,
+          navigation: {
+            nextEl: ".custom-video-button-next",
+            prevEl: ".custom-video-button-prev",
+          },
+          on: {
+            init: VideoUpdateProgressBar,
+            slideChange: VideoUpdateProgressBar,
+          },
+          breakpoints: {
+            640: {
+              slidesPerView: 1,
+            },
+            768: {
+              slidesPerView: 2,
+            },
+            1024: {
+              slidesPerView: 3,
+            },
+          },
+        });
 
-  // Initialize the progress bar
-  VideoUpdateProgressBar(videoSwiper);;
-</script>
-  
+        swiper.init();
 
-</body>
+        function VideoUpdateProgressBar() {
+          const totalSlides = swiper.slides.length;
+          const currentIndex = swiper.activeIndex + swiper.params.slidesPerView;
+          const progressPercentage = (currentIndex / totalSlides) * 100;
+          progressBar.style.width = `${Math.min(progressPercentage, 100)}%`;
+        }
+      });
+    </script>
+  </body>
+</html>
+
+    </script>
+  </body>
 </html>
