--- a/src/it-it.html
+++ b/src/it-it.html
@@ -1,18 +1,501 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Main Content Page</title>
+    <title>Al Bronzo</title>
+
+    <!-- Swiper CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/styles.css" />
+
+    <!-- 360 viewer -->
+    <script src="https://cdn.jsdelivr.net/npm/@3dweb/360javascriptviewer@1/lib/JavascriptViewer.min.js"></script>
+
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <!-- GLightbox CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css"
+    />
+
+    <!-- GLightbox JS -->
+    <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
+
+    <!-- Set locale for 360 viewer pack -->
+    <script>
+      window.locale = "it";
+    </script>
+
+    <!-- Custom JS -->
+    <script src="./assets/main.js" defer></script>
   </head>
   <body>
-    <section class="main-section">
-      <h2>Main Content</h2>
-      <p>This content will be placed inside the template's body section.</p>
+    <div class="snap-container">
+      <!-- navbar and hero section -->
+      <section class="bg-hero-gradient pt-20 lg:pt-[100px] main-section">
+        <!-- container -->
+        <div class="custom-container">
+          <!-- logo -->
+          <div>
+            <div class="flex justify-center lg:mt-6 bronzo-logo">
+              <img src="./assets/images/Al-Bronzo.png" class="w-44 h-auto" />
+            </div>
+          </div>
 
-      <h1>My new header</h1>
-    </section>
+          <!-- hero section -->
+          <div class="flex flex-col justify-center mt-9">
+            <h1
+              class="w-[260px] md:w-[300px] lg:w-[400px] xl:w-[530px] mx-auto text-center uppercase"
+            >
+              Nata per catturare il sugo
+            </h1>
+
+            <p
+              class="w-[340px] md:w-[370px] lg:w-[450px] mx-auto lg:text-2xl text-center pt-5"
+            >
+              Barilla Al Bronzo cattura il sugo fino all'ultima goccia, per
+              un'esperienza di gusto straordinaria.
+            </p>
+
+            <img
+              src="./assets/images/hero-image.webp"
+              alt="hero"
+              class="w-80 md:w-[450px] lg:w-[430px] xl:w-[560px] mx-auto h-auto mt-9 md:mt-12"
+            />
+
+            <!-- arrow down svg -->
+            <img
+              id="scroll-arrow"
+              src="./assets/images/arrow-down.svg"
+              alt="hero"
+              class="w-4 mx-auto h-auto my-11 bounce-animation cursor-pointer"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- 360 degree section -->
+      <section class="relative bg-red pt-10 md:pt-16 pb-28 lg:pb-36">
+        <div class="custom-container">
+          <h1 class="w-[260px] sm:w-full mx-auto text-center uppercase">
+            REINVENTARE LA TRADIZIONE
+          </h1>
+
+          <p
+            class="w-[280px] md:w-[560px] lg:w-[660px] lg:text-2xl mx-auto text-center pt-5"
+          >
+            Una nuova, elegante confezione da 500 grammi, pensata per celebrare
+            la qualità di Barilla Al Bronzo e sottolinearne l'eccezionale presa
+            sul sugo.
+          </p>
+
+          <!-- 360 viewer -->
+
+          <div id="jsv-holder" class="mx-auto max-w-[600px]">
+            <img
+              id="jsv-image"
+              alt="example"
+              src="./assets/images/360/it/BARILLA AL BRONZO_MEZZI RIGATONI_ITA_F000.png"
+            />
+          </div>
+
+          <!-- 360 degree svg -->
+          <img
+            src="./assets/images/360-degree.svg"
+            alt="hero"
+            class="w-24 mx-auto"
+          />
+        </div>
+      </section>
+
+      <!-- Product Carousel Section -->
+      <section class="relative bg-bronze-200">
+        <!-- clippy path div -->
+        <div
+          class="degree-section-clippy w-full h-[20%] lg:h-[25%] -top-[150px] md:-top-[120px] lg:-top-[180px] absolute bg-bronze-200 z-40"
+        ></div>
+
+        <!-- container -->
+        <div class="custom-container pt-4 pb-10">
+          <h1
+            class="w-[260px] sm:w-[420px] lg:w-[550px] xl:w-[820px] mx-auto text-center uppercase"
+          >
+            TUTTI I FORMATI PER ACCONTENTARE OGNI PALATO
+          </h1>
+
+          <p
+            class="w-[320px] sm:w-[380px] md:w-[520px] lg:w-[560px] xl:w-[530px] mx-auto text-center pt-5"
+          >
+            Il loro design, sapientemente realizzato dai nostri esperti, rende
+            ogni formato di pasta perfetto per vivere un'esperienza gastronomica
+            unica e intensa.
+          </p>
+
+          <!-- cards -->
+          <div
+            class="max-w-[328px] md:max-w-[486px] lg:max-w-[802px] xl:max-w-[976px] mx-auto"
+          >
+            <div class="swiper mySwiper relative mt-10">
+              <div class="swiper-wrapper">
+                <!-- card 1 -->
+                <div class="swiper-slide">
+                  <a href="#">
+                    <img
+                      src="./assets/images/carousel-section/it/1-fusilli.png"
+                      alt="pic"
+                      class="w-full h-[430px] object-cover rounded-2xl"
+                    />
+                  </a>
+                </div>
+
+                <!-- card 2 -->
+                <div class="swiper-slide">
+                  <a href="#">
+                    <img
+                      src="./assets/images/carousel-section/it/2-fusilloni.png"
+                      alt="pic"
+                      class="w-full h-[430px] object-cover rounded-2xl"
+                    />
+                  </a>
+                </div>
+
+                <!-- card 3 -->
+                <div class="swiper-slide">
+                  <a href="#">
+                    <img
+                      src="./assets/images/carousel-section/it/3-mezze-penne-rigate.png"
+                      alt="pic"
+                      class="w-full h-[430px] object-cover rounded-2xl"
+                    />
+                  </a>
+                </div>
+
+                <!-- card 4 -->
+                <div class="swiper-slide">
+                  <a href="#">
+                    <img
+                      src="./assets/images/carousel-section/it/4-mezzi-rigatoni.png"
+                      alt="pic"
+                      class="w-full h-[430px] object-cover rounded-2xl"
+                    />
+                  </a>
+                </div>
+
+                <!-- card 5 -->
+                <div class="swiper-slide">
+                  <a href="#">
+                    <img
+                      src="./assets/images/carousel-section/it/5-penne-rigate.png"
+                      alt="pic"
+                      class="w-full h-[430px] object-cover rounded-2xl"
+                    />
+                  </a>
+                </div>
+
+                <!-- card 6 -->
+                <div class="swiper-slide">
+                  <a href="#">
+                    <img
+                      src="./assets/images/carousel-section/it/6-tortiglioni.png"
+                      alt="pic"
+                      class="w-full h-[430px] object-cover rounded-2xl"
+                    />
+                  </a>
+                </div>
+
+                <!-- card 7 -->
+                <div class="swiper-slide">
+                  <a href="#">
+                    <img
+                      src="./assets/images/carousel-section/it/7-linguine.png"
+                      alt="pic"
+                      class="w-full h-[430px] object-cover rounded-2xl"
+                    />
+                  </a>
+                </div>
+
+                <!-- card 8 -->
+                <div class="swiper-slide">
+                  <a href="#">
+                    <img
+                      src="./assets/images/carousel-section/it/8-spaghetti.png"
+                      alt="pic"
+                      class="w-full h-[430px] object-cover rounded-2xl"
+                    />
+                  </a>
+                </div>
+
+                <!-- card 9 -->
+                <div class="swiper-slide">
+                  <a href="#">
+                    <img
+                      src="./assets/images/carousel-section/it/9-spaghetti-quadrati.png"
+                      alt="pic"
+                      class="w-full h-[430px] object-cover rounded-2xl"
+                    />
+                  </a>
+                </div>
+
+                <!-- card 10 -->
+                <div class="swiper-slide">
+                  <a href="#">
+                    <img
+                      src="./assets/images/carousel-section/it/10-spaghettoni.png"
+                      alt="pic"
+                      class="w-full h-[430px] object-cover rounded-2xl"
+                    />
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- pagination -->
+          <div
+            class="w-[300px] md:w-[454px] mx-auto flex items-center gap-3 mt-10"
+          >
+            <div class="progress-bar w-full h-[2px] bg-white relative">
+              <div class="progress h-full bg-red absolute top-0 left-0"></div>
+            </div>
+            <!-- <div class="progress-bar">
+          <div class="progress"></div>
+        </div> -->
+
+            <!-- prev button -->
+            <div
+              class="custom-button-prev w-full max-w-8 h-8 flex flex-shrink-1 items-center justify-center rounded-full"
+            >
+              <img
+                src="./assets/images/carousel-section/left-arrow.svg"
+                alt="pic"
+              />
+            </div>
+
+            <!-- next button -->
+            <div
+              class="custom-button-next w-full max-w-8 h-8 flex items-center justify-center rounded-full"
+            >
+              <img
+                src="./assets/images/carousel-section/right-arrow-red.svg"
+                alt="pic"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="relative h-[640px] md:h-[432px] lg:h-[576px] xl:h-[708px] 2xl:h-[808px] flex items-center justify-center"
+      >
+        <video
+          class="absolute top-0 left-0 w-full h-full object-cover z-0"
+          autoplay
+          loop
+          muted
+          playsinline
+        >
+          <source src="./assets/videos/background-1.mp4" type="video/mp4" />
+        </video>
+
+        <div class="relative z-10 text-white text-center">
+          <p class="lg:text-2xl md:w-[600px] lg:w-full mx-auto">
+            <span class="text-xl lg:text-2xl font-acumin tracking-normal block">
+              Sono i grani duri pregiati, coltivati in Italia,
+            </span>
+            a donare a Barilla Al Bronzo il gusto rotondo e leggermente tostato.
+          </p>
+        </div>
+      </section>
+
+      <!-- video + image section -->
+      <section
+        class="relative h-[640px] md:h-[432px] lg:h-[576px] xl:h-[708px] 2xl:h-[808px] flex items-center justify-center overflow-hidden"
+      >
+        <!-- Background video -->
+        <video
+          autoplay
+          loop
+          muted
+          playsinline
+          class="absolute top-0 left-0 w-full h-full object-cover z-0"
+        >
+          <source src="./assets/videos/background-3.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+
+        <!-- Content -->
+        <div class="relative z-10 text-white text-center">
+          <h1
+            class="w-[260px] lg:w-[360px] xl:w-[460px] mx-auto text-center uppercase"
+          >
+            UN’eccellente tenuta del sugo
+          </h1>
+          <p
+            class="w-[312px] sm:w-[400px] md:w-[520px] mx-auto text-center pt-5"
+          >
+            Risultato di decenni di esperienza, la nostra trafilatura al bronzo
+            conferisce alla pasta Barilla Al Bronzo una superficie ruvida e
+            porosa che aderisce senza sforzo a ogni goccia di sugo.
+          </p>
+          <p class="hidden lg:block lg:w-[430px] mx-auto text-center pt-5">
+            Il nostro grano duro di alta qualità, accuratamente selezionato,
+            dona alla pasta un sapore rotondo e leggermente tostato, dando vita
+            a un'esperienza di gusto indimenticabile.
+          </p>
+        </div>
+      </section>
+
+      <!-- video Carousel section -->
+      <section class="bg-red py-16">
+        <!-- img + text -->
+        <div class="custom-container">
+          <h1
+            class="w-[328px] lg:w-[528px] xl:w-[700px] mx-auto text-center uppercase"
+          >
+            UN PIACERE PER GLI OCCHI E PER IL PALATO
+          </h1>
+          <p class="lg:text-2xl text-center pt-5">
+            Innamorati di ricette classiche e creative con Barilla Al Bronzo.
+          </p>
+          <div class="py-12">
+            <img
+              src="./assets/images/video-carousel-section/desk.webp"
+              alt="pic"
+              class="w-full h-auto mx-auto rounded-2xl"
+            />
+          </div>
+        </div>
+
+        <!-- video carousel -->
+        <div>
+          <h1
+            class="w-[328px] lg:w-[428px] xl:w-[600px] mx-auto text-center uppercase"
+          >
+            IMPARA DA UNO CHEF STELLATO MICHELIN
+          </h1>
+          <p class="lg:text-2xl w-[250px] sm:w-full mx-auto text-center pt-5">
+            Ricrea queste ricette di pasta Barilla Al Bronzo dello Chef Oldani.
+          </p>
+
+          <div
+            class="w-full max-w-[320px] md:max-w-[586px] lg:max-w-[870px] xl:w-[1020px] mx-auto mt-8 md:mt-10 lg:mt-12"
+          >
+            <div class="swiper videoSwiper relative mt-10">
+              <div class="swiper-wrapper">
+                <!-- img1 -->
+                <div class="swiper-slide">
+                  <a
+                    href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
+                    class="glightbox"
+                  >
+                    <img
+                      src="./assets/images/video-carousel-section/img1.webp"
+                      alt="pic"
+                      class="w-full h-[430px] object-cover rounded-2xl"
+                    />
+                  </a>
+                </div>
+
+                <!-- img2 -->
+                <div class="swiper-slide">
+                  <a
+                    href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
+                    class="glightbox"
+                  >
+                    <img
+                      src="./assets/images/video-carousel-section/img2.webp"
+                      alt="pic"
+                      class="w-full h-[430px] object-cover rounded-2xl"
+                    />
+                  </a>
+                </div>
+
+                <!-- img3 -->
+                <div class="swiper-slide">
+                  <a
+                    href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
+                    class="glightbox"
+                  >
+                    <img
+                      src="./assets/images/video-carousel-section/img3.webp"
+                      alt="pic"
+                      class="w-full h-[430px] object-cover rounded-2xl"
+                    />
+                  </a>
+                </div>
+                <!-- img4 -->
+                <div class="swiper-slide">
+                  <a
+                    href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
+                    class="glightbox"
+                  >
+                    <img
+                      src="./assets/images/video-carousel-section/img1.webp"
+                      alt="pic"
+                      class="w-full h-[430px] object-cover rounded-2xl"
+                    />
+                  </a>
+                </div>
+
+                <!-- img5 -->
+                <div class="swiper-slide">
+                  <a
+                    href="https://www.youtube.com/watch?v=tcvPFmF14BY&ab_channel=Barilla"
+                    class="glightbox"
+                  >
+                    <img
+                      src="./assets/images/video-carousel-section/img2.webp"
+                      alt="pic"
+                      class="w-full h-[430px] object-cover rounded-2xl"
+                    />
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- pagination -->
+          <div
+            class="w-[300px] md:w-[454px] mx-auto flex items-center gap-3 mt-8"
+          >
+            <!-- progress bar -->
+            <!-- progress bar -->
+            <div id="progress-bar" class="w-full h-[2px] bg-white relative">
+              <div
+                class="video-progress-bar w-0 h-full bg-blue absolute top-0 left-0"
+              ></div>
+            </div>
+
+            <!-- prev button -->
+            <div
+              class="custom-video-button-prev w-full max-w-8 h-8 flex flex-shrink-1 items-center justify-center rounded-full"
+            >
+              <img
+                src="./assets/images/carousel-section/left-arrow.svg"
+                alt="pic"
+              />
+            </div>
+
+            <!-- next button -->
+            <div
+              class="custom-video-button-next w-full max-w-8 h-8 flex items-center justify-center rounded-full"
+            >
+              <img
+                src="./assets/images/carousel-section/right-arrow-blue.svg"
+                alt="pic"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
-
